--- a/molecule.yml
+++ b/molecule.yml
@@ -3,6 +3,11 @@
 driver:
   name: docker
 
+provisioner:
+  name: ansible
+  options:
+    vvv: True
+
 vagrant:
   platforms:
     - name: centos7
@@ -25,3 +30,4 @@ docker:
 
 verifier:
   name: testinfra
+
