Workaround docker 17.12.1.ce-1.el7.centos in docker bug

--- a/molecule.yml
+++ b/molecule.yml
@@ -5,8 +5,6 @@ driver:
 
 provisioner:
   name: ansible
-  options:
-    vvv: True
 
 vagrant:
   platforms:
@@ -27,6 +25,15 @@ docker:
     image: centos/systemd
     image_version: latest
     privileged: True
+
+ansible:
+  group_vars:
+    docker-hosts:
+      # This should allow docker-in-docker to work
+      docker_storage_driver: vfs
+      # Latest version 17.12.1.ce-1.el7.centos has a bug that prevents
+      # testing on travis: https://github.com/docker/for-linux/issues/219
+      docker_version: 17.09.1.ce-1.el7.centos
 
 verifier:
   name: testinfra
