--- a/molecule.yml
+++ b/molecule.yml
@@ -21,10 +21,24 @@ vagrant:
 
 docker:
   containers:
-  - name: cadvisor
+  - name: centos 
     image: centos/systemd
     image_version: latest
     privileged: True
+  - name: bionic
+    image: paulfantom/ubuntu-molecule
+    image_version: "18.04"
+    docker_host: "${DOCKER_HOST:-unix://var/run/docker.sock}"
+    privileged: true
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+  - name: xenial
+    image: paulfantom/ubuntu-molecule
+    image_version: "16.04"
+    docker_host: "${DOCKER_HOST:-unix://var/run/docker.sock}"
+    privileged: true
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
 
 ansible:
   group_vars:
