--- a/molecule.yml
+++ b/molecule.yml
@@ -19,35 +19,43 @@ vagrant:
   instances:
     - name: cadvisor
 
-docker:
-  containers:
-  - name: centos 
-    image: centos/systemd
-    image_version: latest
-    privileged: True
+platforms:
   - name: bionic
-    image: paulfantom/ubuntu-molecule
-    image_version: "18.04"
+    image: paulfantom/ubuntu-molecule:18.04
     docker_host: "${DOCKER_HOST:-unix://var/run/docker.sock}"
     privileged: true
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
   - name: xenial
-    image: paulfantom/ubuntu-molecule
-    image_version: "16.04"
+    image: paulfantom/ubuntu-molecule:16.04
     docker_host: "${DOCKER_HOST:-unix://var/run/docker.sock}"
     privileged: true
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
-
-ansible:
-  group_vars:
-    docker-hosts:
-      # This should allow docker-in-docker to work
-      docker_storage_driver: vfs
-      # Latest version 17.12.1.ce-1.el7.centos has a bug that prevents
-      # testing on travis: https://github.com/docker/for-linux/issues/219
-      docker_version: 17.09.1.ce-1.el7.centos
+  - name: stretch
+    image: paulfantom/debian-molecule:9
+    docker_host: "${DOCKER_HOST:-unix://var/run/docker.sock}"
+    privileged: true
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+  - name: jessie
+    image: paulfantom/debian-molecule:8
+    docker_host: "${DOCKER_HOST:-unix://var/run/docker.sock}"
+    privileged: true
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+  - name: centos7
+    image: paulfantom/centos-molecule:7
+    docker_host: "${DOCKER_HOST:-unix://var/run/docker.sock}"
+    privileged: true
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+  - name: fedora
+    image: paulfantom/fedora-molecule:27
+    docker_host: "${DOCKER_HOST:-unix://var/run/docker.sock}"
+    privileged: true
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
 
 verifier:
   name: testinfra
