--- a/molecule.yml
+++ b/molecule.yml
@@ -25,12 +25,8 @@ docker:
     image: centos/systemd
     image_version: latest
     privileged: True
-    volumes:
-     - /:/rootfs:ro
-     - /var/run:/var/run:rw
-     - /sys:/sys:ro
-     - /var/lib/docker/:/var/lib/docker:ro
-     - /dev/disk/:/dev/disk:ro
+    volume_mounts:
+     - /sys/fs/cgroup:/sys/fs/cgroup:ro
 
 ansible:
   group_vars:
@@ -43,4 +39,3 @@ ansible:
 
 verifier:
   name: testinfra
-
